chore : adding about

--- a/apps/blog/public/posts/about.mdx
+++ b/apps/blog/public/posts/about.mdx
@@ -1,4 +1,36 @@
-- 새로운 기술 도입을 주저하지 않습니다
-- UI, UX를 개선하는 과정과 레퍼런스 탐구를 좋아합니다
-- 새로운 기술을 배우고 공유하는 과정을 좋아합니다
-- 현재 여신티켓에서 근무하고 있습니다
+- UI, UX를 개선하는 과정과 레퍼런스 탐구를 좋아합니다.
+- 새로운 기술을 배우고 공유하는 과정을 좋아합니다.
+- asdf
+- asdf
+
+\n
+
+\n
+
+\n
+
+\n
+
+## 커리어 요약
+
+# 패스트레인 (여신티켓)
+
+### 프론트엔드 엔지니어
+
+#### 2021.06 ~ 현재
+
+&nbsp;
+
+# 어포스트 코리아
+
+### 프론트엔드 엔지니어
+
+#### 2020.09 ~ 2021.05
+
+&nbsp;
+
+# 블렌드인
+
+### 프론트엔드 엔지니어
+
+#### 2019.08 ~ 2020.09
