chore : adding about page

--- a/apps/blog/public/posts/about.mdx
+++ b/apps/blog/public/posts/about.mdx
@@ -11,26 +11,36 @@
 
 &nbsp;
 
-## 커리어 요약
+### Working Experience.
+
+&nbsp;
+
+&nbsp;
 
 # 패스트레인 (여신티켓)
 
-### 프론트엔드 엔지니어
+---
 
-#### 2021.06 ~ 현재
+*Period*2021.06 ~ 현재
+
+---
+
+*Position*프론트엔드 엔지니어
+
+---
 
 &nbsp;
 
 # 어포스트 코리아
 
-### 프론트엔드 엔지니어
+프론트엔드 엔지니어
 
-#### 2020.09 ~ 2021.05
+###### 2020.09 ~ 2021.05
 
 &nbsp;
 
 # 블렌드인
 
-### 프론트엔드 엔지니어
+프론트엔드 엔지니어
 
-#### 2019.08 ~ 2020.09
+###### 2019.08 ~ 2020.09
