--- a/apps/blog/posts/about.mdx
+++ b/apps/blog/posts/about.mdx
@@ -1,3 +1,10 @@
+---
+title: about
+date: "2022-05-16"
+description: about
+slug: about
+---
+
 - UI, UX를 개선하는 과정과 레퍼런스 탐구를 좋아합니다.
 - 새로운 기술을 배우고 공유하는 과정을 좋아합니다.
 - asdf
