--- a/apps/blog/posts/about.mdx
+++ b/apps/blog/posts/about.mdx
@@ -7,8 +7,8 @@ slug: about
 
 - UI, UX를 개선하는 과정과 레퍼런스 탐구를 좋아합니다.
 - 새로운 기술을 배우고 공유하는 과정을 좋아합니다.
-- asdf
-- asdf
+- TBD
+- TBD
 
 &nbsp;
 
@@ -36,18 +36,28 @@ slug: about
 
 ---
 
-&nbsp;
+*Projects*여신티켓 서비스 프론트엔드 개발
 
-# 어포스트 코리아
-
-프론트엔드 엔지니어
-
-###### 2020.09 ~ 2021.05
+---
 
 &nbsp;
 
-# 블렌드인
+&nbsp;
 
-프론트엔드 엔지니어
+#### 여신티켓 프로덕트 (React 웹뷰)
 
-###### 2019.08 ~ 2020.09
+2021.06 ~ 현재
+
+&nbsp;
+
+#### Description.
+
+여신티켓 앱에서 구동하는 대부분의 웹뷰 페이지를 React로 개발, 유지보수 하고 있습니다.
+
+&nbsp;
+
+#### What Did I Do.
+
+&nbsp;
+
+#### Tech Stack.
