--- a/apps/blog/posts/about.mdx
+++ b/apps/blog/posts/about.mdx
@@ -7,8 +7,8 @@ slug: about
 
 - UI, UX를 개선하는 과정과 레퍼런스 탐구를 좋아합니다.
 - 새로운 기술을 배우고 공유하는 과정을 좋아합니다.
+- 컴포넌트의 재사용과 생산성 향상을 고민합니다.
 - TBD
-- TBD
 
 &nbsp;
 
@@ -18,7 +18,7 @@ slug: about
 
 &nbsp;
 
-### Working Experience.
+###### Working Experience.
 
 &nbsp;
 
@@ -44,7 +44,7 @@ slug: about
 
 &nbsp;
 
-#### 여신티켓 백오피스
+#### 여신티켓 프로덕트 (React 웹뷰)
 
 2021.06 ~ 현재
 
@@ -180,7 +180,7 @@ React, TypeScript, Next.js, Redux, Redux-Saga, Styled-Components
 
 &nbsp;
 
-### Communities.
+###### Communities.
 
 &nbsp;
 
@@ -204,7 +204,7 @@ React, TypeScript, Next.js, Redux, Redux-Saga, Styled-Components
 
 &nbsp;
 
-### Other Experiences.
+###### Other Experiences.
 
 &nbsp;
 
@@ -260,7 +260,7 @@ React, TypeScript, Next.js, Redux, Redux-Saga, Styled-Components
 
 &nbsp;
 
-### Education.
+###### Education.
 
 &nbsp;
 
