--- a/apps/blog/posts/about.mdx
+++ b/apps/blog/posts/about.mdx
@@ -5,10 +5,9 @@ description: about
 slug: about
 ---
 
-- UI, UX를 개선하는 과정과 레퍼런스 탐구를 좋아합니다.
-- 새로운 기술을 배우고 공유하는 과정을 좋아합니다.
+- UI, UX를 개선하는 과정을 좋아합니다.
+- 새로운 기술을 배우고 적용하는 과정을 좋아합니다.
 - 컴포넌트의 재사용과 생산성 향상을 고민합니다.
-- TBD
 
 &nbsp;
 
