--- a/apps/blog/posts/about.mdx
+++ b/apps/blog/posts/about.mdx
@@ -57,7 +57,7 @@ slug: about
 
 #### What Did I Do.
 
-- 기존의 PHP -> React로 전환
+- 기존의 PHP 프로젝트를 React로 리팩토링
 - 결제 추가 및 비즈니스 요구에 따른 기능 추가
 - React Query, Mobx를 이용한 데이터 및 상태관리
 - Storybook을 활용한 사내 디자인시스템 구현
