chore : add category

--- a/apps/blog/posts/about/about.mdx
+++ b/apps/blog/posts/about/about.mdx
@@ -5,7 +5,7 @@ description: about
 slug: about
 ---
 
-- UI, UX를 개선하는 과정을 좋아합니다.
+- UI, UX를 개선하고 탐구하는 과정을 좋아합니다.
 - 새로운 기술을 배우고 적용하는 과정을 좋아합니다.
 - 컴포넌트의 재사용과 생산성 향상을 고민합니다.
 
@@ -23,7 +23,7 @@ slug: about
 
 &nbsp;
 
-# 패스트레인 (여신티켓)
+# 여신티켓
 
 ---
 
@@ -51,16 +51,17 @@ slug: about
 
 #### Description.
 
-여신티켓 앱에서 구동하는 대부분의 웹뷰 페이지를 React로 개발, 유지보수 하고 있습니다.
+여신티켓 앱 내에서 구동하는 대부분의 웹뷰 페이지를 React로 개발, 유지보수 하고 있습니다.
 
 &nbsp;
 
 #### What Did I Do.
 
-- 기존의 PHP 프로젝트를 React로 리팩토링
-- 결제 추가 및 비즈니스 요구에 따른 기능 추가
-- React Query, Mobx를 이용한 데이터 및 상태관리
-- Storybook을 활용한 사내 디자인시스템 구현
+- 기존의 PHP 베이스의 프로젝트를 React로 리팩토링 했습니다.
+- Applike한 UI/UX를 구현했고, 웹뷰와 네이티브간 통신을 통해 필요에 따라 작업을 네이티브에 위임했습니다.
+- 결제 추가 및 비즈니스 요구에 따른 새로운 기능들을 개발했습니다.
+- React Query를 사용해 Data Fetching과 공통 에러처리를 구현했습니다.
+- Storybook을 활용해 사내 디자인 시스템을 구축했습니다.
 
 &nbsp;
 
@@ -108,9 +109,9 @@ React, Next.js, TypeScript, React-Query, Mobx, Emotion, Storybook
 
 #### What Did I Do.
 
-- Flutter를 이용해 Ios, Android 개발
-- Google Map Api를 활용하여 지도 기반의 서비스 구축
-- 1인 개발로 개발/기획/디자인/스토어 배포 전담
+- Flutter를 이용해 Ios, Android 크로스 플랫폼 앱 개발을 했습니다.
+- Google Map Api를 활용하여 지도 기반의 서비스를 구축했습니다.
+- 1인 개발로 개발/기획/디자인/스토어 배포 전담했습니다.
 
 &nbsp;
 
@@ -158,10 +159,10 @@ Flutter, Dart, Provider, Firebase
 
 #### What Did I Do.
 
-- 프론트엔드 기술환경 구성 및 기본 기능 구현
-- 실시간 인테리어 시뮬레이션 기능 및 인테리어 기능 구현
-- TypeScript 도입
-- 반응형 디자인 적용
+- 프론트엔드 기술환경 구성 및 기본 기능들을 구현했습니다.
+- 실시간 인테리어 시뮬레이션 기능과 취향을 알려주는 Style Aiming을 개발했습니다.
+- 기존의 Javascript에서 TypeScript 도입했습니다.
+- 반응형 디자인을 적용했습니다.
 
 &nbsp;
 
@@ -249,7 +250,7 @@ React, TypeScript, Next.js, Redux, Redux-Saga, Styled-Components
 
 #### Description.
 
-스리랑카 대사관 영사과에서 인턴으로 근무했습니다. 모든 업무는 영어로 진행하였으며 스리랑카 직원분들에게 간단한 통역 제공 및 업무보조를 맡았습니다.
+주한 스리랑카 대사관 영사과에서 인턴으로 근무했습니다. 모든 업무는 영어로 진행하였으며 스리랑카 직원분들에게 간단한 통역 제공 및 업무보조를 맡았습니다.
 
 &nbsp;
 
@@ -265,7 +266,7 @@ React, TypeScript, Next.js, Redux, Redux-Saga, Styled-Components
 
 #### 연세대학교 미래캠퍼스
 
-2013.03
+2013.03 ~ 2019.02
 
 &nbsp;
 
