chore : add sns icon

--- a/apps/blog/posts/about/about.mdx
+++ b/apps/blog/posts/about/about.mdx
@@ -6,6 +6,7 @@ slug: about
 ---
 
 - UI, UX를 개선하고 탐구하는 과정을 좋아합니다.
+- 비즈니스에 공감하면서 주도적으로 개발할려고 노력합니다.
 - 새로운 기술을 배우고 적용하는 과정을 좋아합니다.
 - 컴포넌트의 재사용과 생산성 향상을 고민합니다.
 
@@ -277,3 +278,19 @@ React, TypeScript, Next.js, Redux, Redux-Saga, Styled-Components
 &nbsp;
 
 &nbsp;
+
+<a href="https://github.com/shpkc" target="_blank">
+	<img
+		src="https://cdn.icon-icons.com/icons2/936/PNG/512/github-logo_icon-icons.com_73546.png"
+		width="30px"
+		height="30px"
+		style={{ margin: "0 3px 0 0" }}
+	/>
+</a>
+<a href="https://www.linkedin.com/in/sihyung-park-1a8805211/" target="_blank">
+	<img
+		src="https://cdn.icon-icons.com/icons2/2428/PNG/512/linkedin_black_logo_icon_147114.png"
+		width="30px"
+		height="30px"
+	/>
+</a>
