--- a/apps/blog/posts/about/about.mdx
+++ b/apps/blog/posts/about/about.mdx
@@ -281,16 +281,12 @@ React, TypeScript, Next.js, Redux, Redux-Saga, Styled-Components
 
 <a href="https://github.com/shpkc" target="_blank">
 	<img
-		src="https://cdn.icon-icons.com/icons2/936/PNG/512/github-logo_icon-icons.com_73546.png"
+		src="static/icons/github.png"
 		width="30px"
 		height="30px"
 		style={{ margin: "0 3px 0 0" }}
 	/>
 </a>
 <a href="https://www.linkedin.com/in/sihyung-park-1a8805211/" target="_blank">
-	<img
-		src="https://cdn.icon-icons.com/icons2/2428/PNG/512/linkedin_black_logo_icon_147114.png"
-		width="30px"
-		height="30px"
-	/>
+	<img src="static/icons/linkedin.png" width="30px" height="30px" />
 </a>
