chore : add main api

--- a/apps/blog/posts/articles/nx-monorepo.mdx
+++ b/apps/blog/posts/articles/nx-monorepo.mdx
@@ -7,3 +7,16 @@ description: 모노레포를 도입해 프로젝트 개발환경을 개선해보
 slug: nx-monorepo
 thumbnail: "https://raw.githubusercontent.com/nrwl/nx/master/images/nx.png"
 ---
+
+&nbsp;
+
+<img
+	src="https://raw.githubusercontent.com/nrwl/nx/master/images/nx.png"
+	width="100%"
+    style={{borderRadius:"8px"}}
+
+/>
+
+&nbsp;
+
+# 작성중
