chore : adding nx

--- a/apps/blog/posts/articles/nx-monorepo.mdx
+++ b/apps/blog/posts/articles/nx-monorepo.mdx
@@ -1,6 +1,6 @@
 ---
 id: "1"
-title: NX를 활용한 모노레포 도입기
+title: Nx를 활용한 모노레포 도입기
 category: dev
 date: "2022-05-16"
 description: 모노레포를 도입해 프로젝트 개발환경을 개선해보자
@@ -17,6 +17,105 @@ thumbnail: "https://raw.githubusercontent.com/nrwl/nx/master/images/nx.png"
 
 />
 
+<br />
+<br />
+<br />
+<br />
+
+# Nx 모노레포 도입기
+
+<br />
+
+최근 개인 프로젝트에 Nx를 활용해 모노레포를 도입했습니다. 이 블로그 또한 모노레포의 구성 중 일부인데 2~3개의 프로젝트를 관리하던 중 코드의 재사용 및 공통된 개발환경 구축,
+디자인 시스템의 용이한 활용의 필요성을 느꼈습니다. 예전에 읽었던 [모노레포 관련 글](https://tech.kakao.com/2020/12/03/frontend-growth-03)이
+떠올라 모노레포를 구축하기 위해 여러 방법론 및 라이브러리를 서치했고 결과적으로 Nx를 채택해 도입했습니다.
+
+<br />
+
+<br />
+
+#### 모노레포란 ?
+
+<br />
+<br />
+
+<div style={{display:"flex"}}>
+<img
+	src="https://miro.medium.com/max/691/0*joulAAdTFGe-chHP.png"
+	width="80%"
+	style={{margin:"0 auto"}}
+
+/>
+
+</div>
+<center>(많이들 보신 그 그림)</center>
+
+<br />
+<br />
+
+그림과 같이 레포지터리를 관리하는 방식은 크게 3가지로 나뉩니다.
+
+<br />
+<br />
+
+#### 모놀리스
+
+<br />
+최초의 모놀리식 방식은 소스 코드를 모듈화 하지 않고 하나의 레포지터리에서 모든 프로젝트를
+관리합니다. 모든 코드가 단일버전으로 직접 의존하고 있기 때문에 코드의 재사용이 용이하고
+빌드와 배포 과정도 단순하지만, 관심 분리가 어렵고 자칫 작업 과정에서 레포지터리 전체에
+영향을 줄 수 있습니다.
+
+<br />
+<br />
+
+#### 멀티레포
+
+<br />
+이런 단점을 극복하고자 멀티레포 방식이 등장했습니다. 멀티레포는 여러 모듈을 분리하고
+분리된 모듈은 각각 독립적인 레포지터리에서 독자적 프로젝트가 됩니다. 모놀리스 방식의
+단점은 극복했지만
+
+<br />
+<br />
+
+#### 모노레포
+
+<br />
+
+[위키백과]("https://en.wikipedia.org/wiki/Monorepo")에 따르면 모노레포의 정의는 다음과 같습니다.
+
+<br />
+<br />
+
+> 모노레포란 버전 관리 시스템에서 두 개 이상의 프로젝트 코드가 동일한 저장소에 저장되는 소프트웨어 개발 전략
+
+<br />
+이런 단점을 극복하고자 멀티레포 방식이 등장했습니다. 멀티레포는 여러 모듈을 분리하고
+분리된 모듈은 각각 독립적인 레포지터리에서 독자적 프로젝트가 됩니다. 모놀리스 방식의
+단점은 극복했지만
+
+<br />
+<br />
+
+그림과 같이 레포지터리를 관리하는 방식은 크게 3가지로 나눠집니다.
+
+<br />
+<br />
+
+<br />
+<br />
+
+#### Nx를 선택한 이유
+
 &nbsp;
 
-# 작성중
+#### 모노레포 폴더구조
+
+&nbsp;
+
+#### Vercel로 배포
+
+&nbsp;
+
+####
