--- a/apps/blog/posts/articles/nx-monorepo.mdx
+++ b/apps/blog/posts/articles/nx-monorepo.mdx
@@ -28,7 +28,7 @@ thumbnail: "https://raw.githubusercontent.com/nrwl/nx/master/images/nx.png"
 
 최근 개인 프로젝트에 Nx를 활용해 모노레포를 도입했습니다. 이 블로그 또한 모노레포의 구성 중 일부인데 2~3개의 프로젝트를 관리하던 중 코드의 재사용 및 공통된 개발환경 구축,
 디자인 시스템의 용이한 활용의 필요성을 느꼈습니다. 예전에 읽었던 [모노레포 관련 글](https://tech.kakao.com/2020/12/03/frontend-growth-03)이
-떠올라 모노레포를 구축하기 위해 여러 방법론 및 라이브러리를 서치했고 결과적으로 Nx를 채택해 도입했습니다.
+떠올라 모노레포를 구축하기 위해 여러 방법론 및 라이브러리를 서치했고 결과적으로 Nx를 채택해 도입했습니다. Nx에 대해 서술하기 전에 레포지터리 관리 방법에 대해 먼저 알아보겠습니다.
 
 <br />
 
@@ -44,7 +44,6 @@ thumbnail: "https://raw.githubusercontent.com/nrwl/nx/master/images/nx.png"
 	src="https://miro.medium.com/max/691/0*joulAAdTFGe-chHP.png"
 	width="80%"
 	style={{margin:"0 auto"}}
-
 />
 
 </div>
@@ -53,7 +52,7 @@ thumbnail: "https://raw.githubusercontent.com/nrwl/nx/master/images/nx.png"
 <br />
 <br />
 
-그림과 같이 레포지터리를 관리하는 방식은 크게 3가지로 나뉩니다.
+그림과 같이 레포지터리를 관리하는 방식은 크게 3가지로 나눌 수 있습니다.
 
 <br />
 <br />
@@ -64,7 +63,8 @@ thumbnail: "https://raw.githubusercontent.com/nrwl/nx/master/images/nx.png"
 최초의 모놀리식 방식은 소스 코드를 모듈화 하지 않고 하나의 레포지터리에서 모든 프로젝트를
 관리합니다. 모든 코드가 단일버전으로 직접 의존하고 있기 때문에 코드의 재사용이 용이하고
 빌드와 배포 과정도 단순하지만, 관심 분리가 어렵고 자칫 작업 과정에서 레포지터리 전체에
-영향을 줄 수 있습니다.
+영향을 줄 수 있습니다. 프로젝트의 규모가 커지면 커질수록 이러한 위험성은 증가하고
+설계, 배포등을 매번 거대한 단위로 처리해야 하므로 많은 제약과 비효율이 존재합니다.
 
 <br />
 <br />
@@ -72,9 +72,12 @@ thumbnail: "https://raw.githubusercontent.com/nrwl/nx/master/images/nx.png"
 #### 멀티레포
 
 <br />
-이런 단점을 극복하고자 멀티레포 방식이 등장했습니다. 멀티레포는 여러 모듈을 분리하고
-분리된 모듈은 각각 독립적인 레포지터리에서 독자적 프로젝트가 됩니다. 모놀리스 방식의
-단점은 극복했지만
+이런 모놀리스의 단점을 극복하고자 멀티레포 방식이 등장했습니다. 멀티레포는 여러 모듈을
+분리하고 분리된 모듈은 각각 독립적인 레포지터리에서 독자적 프로젝트가 됩니다. 모놀리스의
+단점은 극복을 했지만 매번 새로운 프로젝트를 생성할 때마다 CI/CD를 포함해 번거로운
+생성 과정을 거쳐야 하고, 패키지의 중복 가능성과 관리 포인트 증가 및 여러 문제점이
+발생하게 됩니다. 이러한 문제점을 극복하고자 적절히 모듈을 분리하고 분리된 모듈을
+쉽게 참조, 테스트, 배포를 쉽게 해주는 모노레포 방식이 등장하였습니다.
 
 <br />
 <br />
@@ -88,34 +91,55 @@ thumbnail: "https://raw.githubusercontent.com/nrwl/nx/master/images/nx.png"
 <br />
 <br />
 
-> 모노레포란 버전 관리 시스템에서 두 개 이상의 프로젝트 코드가 동일한 저장소에 저장되는 소프트웨어 개발 전략
+> 모노레포란 버전 관리 시스템에서 두 개 이상의 프로젝트 코드가 동일한 레포지터리에 저장되는 소프트웨어 개발 전략
 
 <br />
-이런 단점을 극복하고자 멀티레포 방식이 등장했습니다. 멀티레포는 여러 모듈을 분리하고
-분리된 모듈은 각각 독립적인 레포지터리에서 독자적 프로젝트가 됩니다. 모놀리스 방식의
-단점은 극복했지만
-
+모노레포는 두 개 이상의 프로젝트가 동일한 레포지터리에서 관리되는 개발 전략입니다.
+분리된 모듈들은 모노레포 안에서 독자 프로젝트로 존재하지만 레포지터리는 단일 레포지터리를
+사용합니다. 모노레포를 사용하면 프로젝트를 시작할 때 마다 매번 레포지터리를 생성하고
+CI/CD를 포함해 구축과정을 거칠 필요가 없습니다.
 <br />
-<br />
-
-그림과 같이 레포지터리를 관리하는 방식은 크게 3가지로 나눠집니다.
-
-<br />
-<br />
+모노레포의 또 다른 장점은 프로젝트간의 의존성 관리가 용이해지는 것 입니다. 서로 같은
+레포지터리안에 존재하므로 굳이 npm registry와 같은 곳에 publish할 필요가 없어집니다.
+이를 활용해 사내에 디자인 시스템을 구축한다면 굳이 새로운 레포지터리를 만들어 npm에
+배포하지 않고 공통된 레포지터리에 존재하므로 import만 해서 손쉽게 사용할 수 있습니다.
 
 <br />
 <br />
+<br />
+<br />
 
-#### Nx를 선택한 이유
+#### Nx
 
-&nbsp;
+<br />
+모노레포를 구축하는 도구에는 여러가지가 있습니다. 가장 메이저한 라이브러리로는 [Lerna](https://github.com/lerna/lerna)가
+존재했고 npm workspace, yarn berry workspace 등 다양한 도구가 존재하고 있습니다.
+저는 이중에서 조금은 마이너한 [Nx](https://nx.dev/)를 선택했습니다. 왜 Nx를 선택했는지에
+대해서는 다음과 같습니다.
+
+<br />
+
+- CLI로 많은 기능을 제공한다. 몇번의 명령어 입력을 통해 손쉽게 모노레포를 구축할 수 있고 특정 패키지 실행부터 프로젝트 추가까지 손쉽게 관리할 수 있다.
+- 여러 플러그인을 제공한다. Next.js, NestJS, Angular 등 여러 패키지를 사용할 수 있다.
+- 공식문서가 깔끔하게 잘 정돈되어있다. 개발자에게 잘 정리된 공식문서는 네비게이션과도 같다. Vercel로 Nx를 배포하는 과정까지 친절히 설명해준다.
+
+<br />
+<br />
+
+#### Nx의 Learna 인수 !
+
+<br />
+
+최근에는 Nx의 개발사 Nwrl이 Lerna를 인수했다는 놀라운 [소식](https://github.com/lerna/lerna/issues/3121)이
+있었다. 알고보니 Learna를 유지하고 관리하는데 [이슈](https://github.com/lerna/lerna/issues/2703)가
+있었던 것 같고 결과적으로 Nx와 Learna가 통합되는 방향으로 진행된 것 같다. 알고보니 Nx의 개발진들은 구글 출신이었고 (어쩐지 공식문서부터 예사롭지 않더라)
+이쯤되니 Nx를 채택하길 잘했다는 생각이 든다.
+
+<br />
+<br />
+<br />
+<br />
 
 #### 모노레포 폴더구조
 
-&nbsp;
-
 #### Vercel로 배포
-
-&nbsp;
-
-####
