--- a/apps/blog/posts/articles/nx-monorepo.mdx
+++ b/apps/blog/posts/articles/nx-monorepo.mdx
@@ -2,7 +2,7 @@
 id: "1"
 title: Nx를 활용한 모노레포 도입기
 category: dev
-date: "2022-05-16"
+date: "2022-05-27"
 description: 모노레포를 도입해 프로젝트 개발환경을 개선해보자
 slug: nx-monorepo
 thumbnail: "https://raw.githubusercontent.com/nrwl/nx/master/images/nx.png"
@@ -131,15 +131,15 @@ CI/CD를 포함해 구축과정을 거칠 필요가 없습니다.
 <br />
 
 최근에는 Nx의 개발사 Nwrl이 Lerna를 인수했다는 놀라운 [소식](https://github.com/lerna/lerna/issues/3121)이
-있었다. 알고보니 Learna를 유지하고 관리하는데 [이슈](https://github.com/lerna/lerna/issues/2703)가
-있었던 것 같고 결과적으로 Nx와 Learna가 통합되는 방향으로 진행된 것 같다. 알고보니 Nx의 개발진들은 구글 출신이었고 (어쩐지 공식문서부터 예사롭지 않더라)
-이쯤되니 Nx를 채택하길 잘했다는 생각이 든다.
+들려왔습니다. 알고보니 Learna를 유지하고 관리하는데 [이슈](https://github.com/lerna/lerna/issues/2703)가
+있었던 것 같고 결과적으로 Nx와 Learna가 통합되는 방향으로 진행이 되는 것 같습니다. 알고보니 Nx의 개발진들은 구글 출신이었고 (어쩐지 공식문서부터 예사롭지 않더라)
+이쯤되니 Nx를 채택하길 잘했다는 생각이 듭니다.
+
+<br />
+지금부터는 Nx를 활용해 간단한 모노레포를 구축해보고 Vercel로 배포하는 과정까지 다뤄보도록
+하겠습니다.
 
 <br />
 <br />
 <br />
 <br />
-
-#### 모노레포 폴더구조
-
-#### Vercel로 배포
