chore : add code highlight

--- a/apps/blog/posts/articles/nx-monorepo.mdx
+++ b/apps/blog/posts/articles/nx-monorepo.mdx
@@ -126,7 +126,7 @@ CI/CD를 포함해 구축과정을 거칠 필요가 없습니다.
 <br />
 <br />
 
-#### Nx의 Learna 인수 !
+#### Nx의 Learna 인수하다 !
 
 <br />
 
@@ -138,6 +138,22 @@ CI/CD를 포함해 구축과정을 거칠 필요가 없습니다.
 <br />
 지금부터는 Nx를 활용해 간단한 모노레포를 구축해보고 Vercel로 배포하는 과정까지 다뤄보도록
 하겠습니다.
+
+<br />
+<br />
+<br />
+<br />
+
+#### Create Workspace
+
+<br />
+Nx를 활용해 Nx Workspace를 생성합니다. 최초 프레임워크 셋팅은 react로 진행하겠습니다.
+
+<br />
+
+```
+npx create-nx-workspace@latest <YOUR_WORKSPACE_NAME> --preset=react
+```
 
 <br />
 <br />
