chore : addimg nx-sitemap

--- a/apps/blog/posts/articles/nx-monorepo.mdx
+++ b/apps/blog/posts/articles/nx-monorepo.mdx
@@ -47,7 +47,7 @@ thumbnail: "https://raw.githubusercontent.com/nrwl/nx/master/images/nx.png"
 />
 
 </div>
-<center>(많이들 보신 그 그림)</center>
+<center>(많이들 보신 그림)</center>
 
 <br />
 <br />
