chore : adding virtual dom

--- a/apps/blog/posts/articles/how-virtualdom-work.mdx
+++ b/apps/blog/posts/articles/how-virtualdom-work.mdx
@@ -25,7 +25,16 @@ thumbnail: "https://images.indepth.dev/images/2022/04/Exploring-how-virtual-DOM-
 # Virtual DOM은 어떻게 작동하는가
 
 <br />
-Virtual DOM에 대해 알아보자
+React를 사용하는 프론트엔드 개발자라면 Virtual DOM과 뗼레야 뗄 수 없는 관계입니다.
+하지만 우리는 Virtual DOM에 대해 전반적인 개념만 알 뿐 어떻게 작동하는지, React는
+Virtual DOM을 왜 사용하는지 등 깊이 있는 탐구를 해본적은 많지 않을 것 입니다. 최근에
+글을 읽던 중 Virtual DOM에 대해 분석한 좋은 글이 있어서 이렇게 소개를 해봅니다.
+
+<br />
+<br />
+#### Introduction
+
+[원문](https://indepth.dev/posts/1501/exploring-how-virtual-dom-is-implemented-in-react)
 
 <br />
 <br />
